# fruit-classification-kaggle

./: .gitignore  README.md  pyproject.toml
src/: dataset.py  experiment_augmentation.py  lightning_model.py  main.py  model.py  test.py  train.py  train_lightning.py
test_results/: epoch=12-val_acc=0.922_classification_report.txt  epoch=12-val_acc=0.922_test_metrics.json
